# swagger.yml
@@ -9,11 +9,13 @@ produces:
   - application/io.goswagger.examples.todo-list.v1+json
 schemes:
   - http
+  - https
 paths:
   /:
     get:
       tags:
         - todos
+      operationId: findTodos
       parameters:
         - name: since
           in: query
@@ -33,6 +35,60 @@ paths:
               $ref: "#/definitions/item"
         default:
           description: generic error response
+          schema:
+            $ref: "#/definitions/error"
+    post:
+      tags:
+        - todos
+      operationId: addOne
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/item"
+      responses:
+        201:
+          description: Created
+          schema:
+            $ref: "#/definitions/item"
+        default:
+          description: error
+          schema:
+            $ref: "#/definitions/error"
+  /{id}:
+    parameters:
+      - type: integer
+        format: int64
+        name: id
+        in: path
+        required: true
+    put:
+      tags:
+        - todos
+      operationId: updateOne
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/item"
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: "#/definitions/item"
+        default:
+          description: error
+          schema:
+            $ref: "#/definitions/error"
+    delete:
+      tags:
+        - todos
+      operationId: destroyOne
+      responses:
+        204:
+          description: Deleted
+        default:
+          description: error
           schema:
             $ref: "#/definitions/error"
 definitions:
